--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -225,9 +225,9 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Ainu: {{t|ain|モマ|tr=moma}}
 * Albanian: {{t+|sq|kumbull|f}}
 * Arabic: {{t|ar|بَرْقُوق|m}}
-*: Egyptian Arabic: {{t|arz|برقوق|m|tr=barʾūʾ}} {{qualifier|collective}}, {{t|arz|برقوقة|f|tr=barʾūʾa}} (''[[singulative]]'')
+*: Egyptian Arabic: {{t|arz|برقوق|m|tr=barʾūʾ}} {{qualifier|collective}}, {{t|arz|برقوقة|f|tr=barʾūʾa}} {{qualifier|singulative}}
 *: Hijazi Arabic: {{t|acw|بخارى|f|tr=buḵāra}}
-*: Moroccan Arabic: {{t|ary|برْقوقة|f|tr=bərquqa}} {{qualifier|singular, countable}}, {{t|ary|برْقوق|tr=bərquq}} {{qualifier|uncountable}}
+*: Moroccan Arabic:  {{t|ary|برقوق|tr=barquq}} {{qualifier|collective}}, {{t|ary|برقوقة|f|tr=barquqa}} {{qualifier|singulative}}
 *: South Levantine Arabic: {{t|ajp|خوخ|m|tr=xox}}
 * Armenian: {{t+|hy|սալոր}}, {{qualifier|dialectal}} {{t+|hy|շլոր}}
 * Aromanian: {{t|rup|damaschinã|f}}, {{t|rup|dhamaskinã|f}}
