--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -39,6 +39,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 * Albanian: {{t+|sq|ulli|m}}
 * Amharic: {{t|am|ወይራ|sc=Ethi}}
 * Arabic: {{t|ar|زَيْتُون|m}}
+*: Moroccan Arabic: {{t|ary|زيتون|tr=zaytūn, zītūn}}
 * Aragonese: {{t+|an|oliva|f}}
 * Aramaic:
 *: Hebrew: {{t|arc|זיתא|tr=zaytā, zayto|m}}
