--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -26,7 +26,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 #*: Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall&nbsp;[…].
 #* '''1613''', {{w|William Shakespeare}}, ''[[s: The Life of King Henry the Eighth|The Life of King Henry the Eighth]]'', IV. ii. 34:
 #*: He was a man / Of an unbounded '''stomach''', ever ranking / Himself with princes;
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|John Locke}}
+#* {{rfdatek|en|John Locke}}
 #*: This sort of crying proceeding from pride, obstinacy, and '''stomach''', the will, where the fault lies, must be bent.
 # {{lb|en|obsolete}} [[appetite|Appetite]].
 #: {{ux|en|a good '''stomach''' for roast beef}}
@@ -400,11 +400,11 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 # {{lb|en|obsolete|intransitive}} To be angry.<!--Webster 1913-->
 #: {{rfquotek|en|Hooker}}
 # {{lb|en|obsolete|transitive}} To [[resent]]; to remember with anger; to [[dislike]].
-#* '''1607''', [[w: William Shakespeare|William Shakespeare]], ''[[s: The Tragedy of Antony and Cleopatra|The Tragedy of Antony and Cleopatra]]'', III. iv. 12:
+#* '''1607''', {{w|William Shakespeare}}, ''[[s: The Tragedy of Antony and Cleopatra|The Tragedy of Antony and Cleopatra]]'', III. iv. 12:
 #*: O, my good lord, / Believe not all; or, if you must believe, / '''Stomach''' not all.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|L'Estrange}}
+#* {{rfdatek|en|L'Estrange}}
 #*: The lion began to show his teeth, and to '''stomach''' the affront.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
+#* {{rfdatek|en|John Milton}}
 #*: The Parliament sit in that body {{...}} to be his counsellors and dictators, though he '''stomach''' it.
 # {{lb|en|obsolete|transitive}} To [[turn]] the stomach of; to [[sicken]] or [[repel]].
 
