--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -22,11 +22,11 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 #*'''1988''', {{w|Angela Carter}}, ‘Peter Carey: ''Oscar and Lucinda''’, in ''Shaking a Leg'', Vintage 2013, p. 713:
 #*:It is the illicit Christmas pudding an incorrigible servant cooks for the little boy one Christmas Day that sparks Oscar's first crisis of belief, for his father, opposed to Christmas pudding on theological grounds, makes the child '''vomit''' his helping.
 # To eject from any hollow place; to belch forth; to emit.
-#* {{quote-journal|en|year=2012|author=John Branch|title=Snow Fall : The Avalanche at Tunnel Creek|newspaper=New York Time|url=http://www.nytimes.com/projects/2012/snow-fall/?smid=fb-nytimes&WT.z_sma=SP_SNT_20130415#/?part=tunnel-creek}}
+#* {{quote-journal|en|year=2012|author=John Branch|title=Snow Fall: The Avalanche at Tunnel Creek| newspaper=New York Time| url=http://www.nytimes.com/projects/2012/snow-fall/?smid=fb-nytimes&WT.z_sma=SP_SNT_20130415#/?part=tunnel-creek}}
 #*: After about a minute, the creek bed '''vomited''' the debris into a gently sloped meadow. Saugstad felt the snow slow and tried to keep her hands in front of her.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|John Milton}}
+#* {{rfdatek|en|John Milton}}
 #*: Like the sons of Vulcan, '''vomit''' smoke.
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Charlotte Brontë}}
+#* {{rfdatek|en|Charlotte Brontë}}
 #*: a column of smoke, such as might be '''vomited''' by a park of artillery
 
 ====Synonyms====
@@ -164,7 +164,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 # The [[regurgitate]]d former contents of a [[stomach]]; [[vomitus]].
 # The act of regurgitating.
 # {{lb|en|obsolete}} That which causes vomiting; an [[emetic]].
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|William Shakespeare}}
+#* {{rfdatek|en|William Shakespeare}}
 #*: He gives your Hollander a '''vomit'''.
 
 ====Synonyms====
@@ -241,6 +241,9 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Maori: {{t|mi|ruakitanga}}
 * Romanian: {{t+|ro|vomare|f}}, {{t+|ro|vomitare|f}}, {{t+|ro|vărsare|f}}, {{t|ro|borâre|f}} {{qualifier|popular}}
 {{trans-bottom}}
+
+====Derived terms====
+* [[vomit comet]]
 
 ====See also====
 * {{l|en|emetic}}
