--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -70,6 +70,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Chichewa: {{t|ny|khothi}}
 * Chinese:
 *: Mandarin: {{t+|cmn|外衣|tr=wàiyī|sc=Hani}}, {{t+|cmn|大衣|tr=dàyī|sc=Hani}}, {{t+|cmn|外套|tr=wàitào|sc=Hani}}
+* Cornish: {{t|kw|kota|m}}, {{t|kw|mantel|f}}
 * Czech: {{t+|cs|kabát|m}}
 * Danish: {{t|da|frakke|c}}
 * Dutch: {{t+|nl|mantel|m}}, {{t+|nl|jas|m}}
@@ -94,12 +95,13 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 * Latin: {{t|la|pallium|n}}, {{t|la|laena|f}}
+{{trans-mid}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
-{{trans-mid}}
 * Luhya: {{t|luy|kumuchosi}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
 * Malay: {{t|ms|kot}}
+* Manx: {{t|gv|cooat|m}}
 * Maori: {{t|mi|koti}}
 * Mongolian: {{t+|mn|пальто}}
 * Navajo: {{t|nv|éétsoh}}
