--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -32,8 +32,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 ##* {{quote-journal|en|date=2013-08-10|volume=408|issue=8848| magazine={{w|The Economist}}| author=Lexington| title=[http://www.economist.com/news/united-states/21583274-new-wave-press-barons-should-not-allow-newspapers-become-niche-products-keeping Keeping the mighty honest]| passage=British journalists shun complete respectability, '''feeling''' a duty to be ready to savage the mighty, or rummage through their bins. Elsewhere in Europe, government contracts and subsidies ensure that press barons will only defy the mighty so far.}}
 ## {{lb|en|transitive}} To [[think]], [[believe]], or have an [[impression]] concerning.
 ##: {{ux|en|I '''feel''' that we need to try harder.}}
-##* {{rfdatek|en|William Shakespeare}}
-##*: Garlands{{...}}which I '''feel''' / I am not worthy yet to wear.
+##* {{RQ:Shakespeare Henry 8|act=IV|scene=ii|passage=They promised me eternal happiness; And brought me garlands, Griffith, which I '''feel''' I am not worthy yet to wear.}}
 ##* {{quote-book|en|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}| chapter=19| url=http://openlibrary.org/works/OL2004261W| passage=When Timothy and Julia hurried up the staircase to the bedroom floor, where a considerable commotion was taking place, Tim took Barry Leach with him. He had him gripped firmly by the arm, since he '''felt''' it was not safe to let him loose, and he had no immediate idea what to do with him.}}
 ## {{lb|en|intransitive|copulative}} To experience an emotion or other mental state.
 ##: {{ux|en|He obviously '''feels''' strongly about it.}}
