--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -6,6 +6,9 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=68011|canj=AOS|ids=⿰日乍}}
 
+====Derived characters====
+* [[葃]]
+
 ====References====
 * {{Han ref|kx=0493.140|dkj=13847|dj=0857.020|hdz=21502.020|uh=6628|ud=26152|bh=AC51|bd=44113}}
 
