--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -79,7 +79,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Albanian: {{t+|sq|bubullimë|f}}, {{t|sq|mumrimë|f}}
 * Arabic: {{t+|ar|رَعْد|m}}
 *: Egyptian Arabic: {{t|arz|رعد|m|tr=raʿd}}
-*: Moroccan Arabic: {{t|ary|رْعدة|f|tr=rʿəda}}
+*: Moroccan Arabic: {{t|ary|رعد|m|tr=raʕd}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܪܥܡܐ|m|tr=raʿmā}}
 * Armenian: {{t+|hy|որոտ}}
