--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -11,9 +11,9 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 {{en-noun}}
 
 # [[fruit|Fruit]] (especially [[peach]]) whose [[flesh]] adheres strongly to the [[pit]].
-#* {{quote-text|en|year=1908|author={{w|O. Henry}}|title=Hostages to Momus|passage=Antelope steaks and fried liver to begin on, and venison cutlets with chili con carne and pineapple fritters, and then some sardines and mixed pickles; and top it off with a can of yellow '''clings''' and a bottle of beer.}}
+#* {{quote-text|en|year=1908|author={{w|O. Henry}}|title=Hostages to Momus| passage=Antelope steaks and fried liver to begin on, and venison cutlets with chili con carne and pineapple fritters, and then some sardines and mixed pickles; and top it off with a can of yellow '''clings''' and a bottle of beer.}}
 # [[adherence]]; [[attachment]]; [[devotion]]
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
+#* {{rfdatek|en|John Milton}}
 #*: A more tenacious '''cling''' to worldly respects.
 
 ====Verb====
@@ -23,10 +23,10 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 #: ''Seaweed '''clung''' to the anchor.''
 #* '''2017,''' {{w|Jennifer S. Holland}}, ''For These Monkeys, It’s a Fight for Survival.'', National Geographic (March 2017)[http://www.nationalgeographic.com/magazine/2017/03/macaques-monkeys-indonesia-endangered-pet-trade/]
 #*: Cartoonish, wide-eyed infants '''cling''' to their mothers or play together low to the ground.
-#* {{quote-book|en|1823|Felicia Dorothea Browne Hemans|The Vespers of Palermo|https://www.worldcat.org/title/vespers-of-palermo-a-tragedy-in-5-acts/oclc/722355055||And what hath life for thee / That thou shouldst '''cling''' to it thus?|section=Act the First}}
+#* {{quote-book|en|1823|Felicia Dorothea Browne Hemans|The Vespers of Palermo| https://www.worldcat.org/title/vespers-of-palermo-a-tragedy-in-5-acts/oclc/722355055|| And what hath life for thee / That thou shouldst '''cling''' to it thus?|section=Act the First}}
 # To [[adhere]] to an object, without being [[affix]]ed, in such a way as to follow its [[contour]]s. Used especially of [[fabric]]s and [[film]]s.
 # {{lb|en|transitive}} To cause to adhere to, especially by [[twining]] round or [[embracing]].
-#* {{rfdate|en|and other bibliographic particulars, eg, title of work, page, url}} {{w|Jonathan Swift}}
+#* {{rfdatek|en|Jonathan Swift}}
 #*: I '''clung''' legs as close to his side as I could.
 # {{lb|en|transitive}} To cause to [[dry up]] or [[wither]].
 #* c. '''1606''', {{w|William Shakespeare}}, “The Tragedie of Macbeth”, Act V, scene v
@@ -96,7 +96,7 @@ Imitative; compare {{m|en|clink}}, {{m|en|clang}}.
 # To produce a high-pitched ringing sound, like a small bell.
 #* '''1913''', Cleveland Moffett, ‎Oliver Herford, ''The Bishop's Purse'' (page 121)
 #*: The tiny chimes '''clinged''' the hours and quarters against his right and Kate's left ear. They counted nine and three-quarters.
-#* {{quote-text|en|year=2003|author=Femi Abodunrin|title=The Dancing Masquerade|page=24|passage=The latter, armed with the most famous tool of their trade — tiny '''clinging''' bells — created a small band of untrained orchestra giving their part of the market a festive outlook {{...}}}}
+#* {{quote-text|en|year=2003|author=Femi Abodunrin|title=The Dancing Masquerade| page=24| passage=The latter, armed with the most famous tool of their trade — tiny '''clinging''' bells — created a small band of untrained orchestra giving their part of the market a festive outlook {{...}}}}
 
 [[Category:English class 3 strong verbs]]
 [[Category:English irregular verbs]]
