--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -53,6 +53,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * Galician: {{t+|gl|espelta|f}}, {{t|gl|melga|f}}
 * German: {{t+|de|Dinkel|m}}, {{t+|de|Spelz|m}}
 * Greek: {{t+|el|όλυρα|f}}
+*: Ancient: {{t|grc|ὄλυρα|f}}
 * Hebrew: {{t|he|כוסמין}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|tönkölybúza}}
