--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -26,7 +26,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 # {{lb|en|basketball|slang}} A [[shot]] which misses, particularly one which bounces directly out of the basket because of a too-flat trajectory, as if the ball were a heavier object.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
 # {{lb|en|informal}} A [[power brick]]; an external [[power supply]] consisting of a small [[box]] with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in another power plug.
-# {{lb|en|computing|_|slang}} An electronic device, especially a heavy box-shaped one, that has become non-functional or obsolete.
+# {{lb|en|computing|_|slang|figurative}} An electronic device, especially a heavy box-shaped one, that has become non-functional or obsolete.
 # {{lb|en|firearms}} A carton of 500 rimfire cartridges, which forms the approximate size and shape of a brick.
 # {{lb|en|poker slang}} A [[community card]] (usually the [[turn]] or the [[river]]) which does not improve a player's hand.
 #: {{ux|en|The two of clubs was a complete '''brick''' on the river}}
