--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -466,8 +466,8 @@ The meaning of ''semen or female ejaculatory discharge'' is considered vulgar sl
 
 # {{non-gloss definition|Used to indicate a point in time at or after which a stated event or situation occurs.}}
 #: {{ux|en|Leave it to settle for about three months and, '''come''' Christmas time, you'll have a delicious concoction to offer your guests.}}
-#: {{ux|en|'''Come''' retirement, their Social Security may turn out to be a lot less than they counted on.''}}
-#: {{ux|en|'''Come''' summer, we would all head off to the coast.''}}
+#: {{ux|en|'''Come''' retirement, their Social Security may turn out to be a lot less than they counted on.}}
+#: {{ux|en|'''Come''' summer, we would all head off to the coast.}}
 #* {{quote-book|1=en|year=1932|year_published=1965|author=Delos W. Lovelace|authorlink=Delos W. Lovelace|title=[[w:King Kong (1933 film)|King Kong]]|page=14|passage="And a long sea voyage that starts at six o'clock '''come''' morning."}}
 #* {{quote-journal|en|date=November 10 2012|author=Amy Lawrence|title=Fulham's Mark Schwarzer saves late penalty in dramatic draw at Arsenal|newspaper=The Guardian|url=http://www.guardian.co.uk/football/2012/nov/10/arsenal-fulham-premier-league|passage='''Come''' the final whistle, Mikel Arteta lay flabbergasted on the turf.}}
 
