--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -357,7 +357,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Georgian: {{t|ka|დაჭერა}}
 * German: {{t+|de|fangen}}
 * Greek:
-*: Ancient Greek: {{t|grc|ζωγρέω}}
+*: Ancient: {{t|grc|ζωγρέω}}
 * Haitian Creole: {{t|ht|atrap}}
 * Hungarian: {{t+|hu|elkap}}
 * Ido: {{t+|io|kaptar}}
@@ -365,6 +365,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Irish: {{t|ga|ceap}}, {{t|ga|beir ar}}
 * Italian: {{t+|it|agguantare}}, {{t+|it|acchiappare}}, {{t+|it|afferrare}}, {{t+|it|chiappare}}
 * Japanese: {{t|ja|捕らえる|tr=とらえる, toraeru|sc=Jpan}}, {{t+|ja|捕まえる|tr=つかまえる, tsukamaeru|sc=Jpan}}
+* Latin: {{t|la|capiō}}
 * Latgalian: {{t|ltg|giut}}, {{t|ltg|giusteit}}, {{t|ltg|čupt}}, {{t|ltg|tvert}}
 * Latvian: {{t|lv|ķert}}, {{t|lv|tvert}}
 * Lombard: {{t|lmo|ciapà}}
