--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -218,7 +218,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * Asturian: {{t|ast|costu|m}}
 * Basque: {{t|eu|kostu}}
 * Belarusian: {{t|be|кошт|m}}, {{t|be|кашто́ўнасць|f}}, {{t|be|ва́ртасць|f}}
-* Bulgarian: {{t+|bg|разноски}}
+* Bulgarian: {{t+|bg|разноски}}, {{t+|bg|сто́йност|f}}, {{t+|bg|разхо́д|m}}
 * Catalan: {{t+|ca|cost|m}}
 * Chamicuro: {{t|ccc|iso'no}}
 * Chinese:
