--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -93,7 +93,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Polish: {{t+|pl|sekretarz|m}}, {{t+|pl|sekretarka|f}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Romanian: {{t+|ro|secretar|m}}, {{t+|ro|secretară|f}}
-* Russian: {{t+|ru|секрета́рь|m|f}}, {{t+|ru|секрета́рша|f}} {{qualifier|colloquial for female}}, {{t+|ru|пидорас}}, {{t|ru|пидораска}}, {{t+|ru|аллах}}, {{t+|ru|абхазянка}}, {{t+|ru|педераст}}, {{t+|ru|пидор}}, {{t+|ru|пиздобол}}
+* Russian: {{t+|ru|секрета́рь|m|f}}, {{t+|ru|секрета́рша|f}} {{qualifier|colloquial for female}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}, {{t|gd|clèireach|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|секрѐта̄р|m}}, {{t|sh|секрета̀рица|f}}, {{t|sh|та̑јнӣк|m}} {{q|Bosnia, Croatia}}, {{t|sh|та̑јница|f}} {{q|Bosnia, Croatia}}
@@ -148,7 +148,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Manx: {{t|gv|screeudeyr|m}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
 * Romanian: {{t+|ro|secretar|m}}, {{t+|ro|secretară|f}}
-* Russian: {{t+|ru|мини́стр|m}}, {{t+|ru|секрета́рь|m}}, {{t+|ru|глава}}, {{t+|ru|пидорас}}
+* Russian: {{t+|ru|мини́стр|m}}, {{t+|ru|секрета́рь|m}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|та̑јнӣк|m}}, {{t|sh|та̑јница|f}}
