--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -66,7 +66,7 @@
 ====Translations====
 {{trans-top|clothing}}
 * Albanian: {{t+|sq|rrethinë|f}}
-* Arabic: {{t|ar|تَنُّورَة|f}}, {{t|ar|جُوب|m}}, {{t|ar|خَرَّاطَة|f}}, {{t|ar|وَزَرَة|f}}, {{t|ar|جُونِلَّة|f|tr=junilla}}
+* Arabic: {{t|ar|تَنُّورَة|f}}, {{t|ar|جُوب|m}}, {{t|ar|خَرَّاطَة|f}}, {{t|ar|وَزَرَة|f}}, {{t|ar|جُونِلَّة|f}}
 *: Egyptian Arabic: {{t|arz|جيبة|f|tr=žība|sc=Arab}}
 * Armenian: {{t+|hy|շրջազգեստ}}
 * Asturian: {{t+|ast|falda|f}}, {{t|ast|saya|f}}
@@ -127,7 +127,7 @@
 * Northern Sami: {{t|se|vuolpu}}
 * Norwegian: {{t+|no|skjørt|n}}
 * Old English: {{t|ang|scyrte|f}}
-* Oriya: {{t|or|ସ୍କର୍ଟ|tr=skarṭa}}
+* Oriya: {{t|or|ସ୍କର୍ଟ}}
 * Persian: {{t+|fa|دامن|tr=dâman|sc=fa-Arab}}
 * Polish: {{t+|pl|spódnica|f}}
 * Portuguese: {{t+|pt|saia|f}}
@@ -230,7 +230,7 @@
 
 {{trans-top|border}}
 * Chinese:
-*: Mandarin: {{t|cmn|边缘，裙边}}
+*: Mandarin: {{t|cmn|边缘}}, {{t|cmn裙边}}
 * Finnish: {{t|fi|reunus}}, {{t+|fi|helma}}
 * German: {{t+|de|Saum|m}}
 {{trans-mid}}
@@ -248,7 +248,7 @@
 * Bulgarian: {{t+check|bg|пола|f|sc=Cyrl}}
 * Estonian: {{t+check|et|seelik}}
 * Georgian: {{t-check|ka|ქვედაკაბა}}
-* Hindi: {{t-check|hi|स्कर्ट|tr=skart.a|sc=Deva}}
+* Hindi: {{t-check|hi|स्कर्ट}}
 * Indonesian: {{t+check|id|rok}}
 * Irish: {{t-check|ga|sciorta|m}}
 * Latvian: {{t-check|lv|stērbele|f}}
@@ -266,7 +266,7 @@
 * Vietnamese: {{t-check|vi|vạt áo}}
 * Welsh: {{t-check|cy|sgert}}
 * West Frisian: {{t-check|fy|jûpe|f}}
-* Yiddish: {{t-check|yi|קליידל|tr=kleidel|n}}
+* Yiddish: {{t-check|yi|קליידל|n}}
 * Zulu: {{t+check|zu|ingubo}}
 {{trans-bottom}}
 
