--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -230,7 +230,7 @@
 
 {{trans-top|border}}
 * Chinese:
-*: Mandarin: {{t|cmn|边缘}}, {{t|cmn裙边}}
+*: Mandarin: {{t|cmn|边缘}}, {{t|cmn|裙边}}
 * Finnish: {{t|fi|reunus}}, {{t+|fi|helma}}
 * German: {{t+|de|Saum|m}}
 {{trans-mid}}
