--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -527,8 +527,9 @@ Phonetically based spelling of {{m|en|plumb}}.
 
 =====Translations=====
 {{trans-top|completely; utterly}}
-* Vietnamese: [[quá sức]] ([[tưởng tượng]])
+* Finnish: {{t|fi|umpi-}}
 {{trans-mid}}
+* Vietnamese: [[quá sức]] ([[tưởng tượng]])
 {{trans-bottom}}
 
 ====Verb====
