--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -306,6 +306,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 
 ===Pronunciation===
 * {{fi-IPA}}
+* {{fi-hyphenation}}
 
 ===Proper noun===
 {{fi-proper noun}}
