--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -10,6 +10,7 @@
 The pictographic protoform of [[螾]] was borrowed to represent "period of days" in oracle bone script. In bronze inscriptions, the semantic component [[日]] (“sun/day”) was added to this character. The phonetic component was mixed with another common semantic component [[勹]] ("bow down") in Warring States period, hence the incorrect analysis in ''{{w|Shuowen Jiezi}}'' of this character as {{Han compound|勹|日}}.
 
 ===Han character===
+{{stroke order|strokes=6}}
 {{Han char|rn=72|rad=日|as=02|sn=6|four=27620|canj=PA|ids=⿹勹日}}
 
 ===See also===
