--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -29,13 +29,17 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 |m=xiǎng
 |dg=щён2
 |c=soeng2
+|g=xiong3
 |h=pfs=sióng
+|j=xiang2
+|mb=siǒ̤ng
 |md=siōng
 |mn=xm,tp,kh,sx,yl,km,mg,hc,tc:siūⁿ/qz,lk,ph:siǔⁿ/zz,tn,md:siōⁿ/pn:siāuⁿ/qz,tw,xm:sióng/zz:siáng
 |mn_note=siūⁿ/siǔⁿ/siōⁿ - vernacular; sióng/siáng - literary
 |mn-t=siên6/sion6/siang2
 |mn-t_note=siên6/sion6 - vernacular (siên6 - Chaozhou); siang2 - literary
 |w=2xian
+|x=sian3
 |mc=y
 |oc=y
 |ma=y
