--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -18,6 +18,7 @@ Cognate to {{cog|en|basis}}, from PIE via Ancient Greek.
 * {{audio|en|En-uk-to come.ogg|Audio (UK)}}
 * {{a|US}} {{IPA|en|/kʌm/|[kʰʌm]}}, {{enPR|kŭm}}
 * {{audio|en|en-us-come.ogg|Audio (US)}}
+There is also an occasional weak form ''kəm''. See [[c’mon]].
 * {{rhymes|en|ʌm}}
 * {{homophones|en|cum}}
 
