--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -232,8 +232,10 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Arabic: {{t|ar|تَقَيُّؤ|m}}
 * Galician: {{t|gl|vómito|m}}
 * Georgian: {{t|ka|პირღებინება}}, {{t|ka|ჩანჩქერო}}, {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}
-* Hebrew: {{t+|he|הֲקָאָה|f|tr=haka'á}}
+* Greek:
+*: Ancient: {{t|grc|ἔμεσις|f}}
 {{trans-mid}}
+* Hebrew: {{t+|he|הֲקָאָה|f|tr=haka'á}}
 * Irish: {{t|ga|orla|m}}, {{t|ga|sceathrach|f}}, {{t|ga|taoisceáil|f}}, {{t|ga|tonntaoscadh|m}} {{qualifier|sudden}}, {{t|ga|urlacan|m}}
 * Kazakh: {{t|kk|лоқсу}}
 * Maori: {{t|mi|ruakitanga}}
