--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -137,7 +137,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Ngazidja Comorian: {{t|zdj|ndravu|c9|c10}}
 * Norman: {{t|nrf|branque|f}}
 * Norwegian: {{t+|no|gren|m}}, {{t+|no|grein|m}}
-* Occitan: {{t|oc|ram|m}}, {{t|oc|ramèl|m}}
+* Occitan: {{t|oc|ram|m}}, {{t|oc|ramèl|m}}, {{t+|oc|branca|f}}
 * Okinawan: {{t|ryu|枝|tr=いぃだ, yida, ゆだ, yuda}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|вѣтвь|f}}
