--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -99,6 +99,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Azerbaijani: {{t+|az|itələmək}}
 * Belarusian: {{t|be|шту́рхаць|impf}}, {{t|be|штурхну́ць|pf}}
 * Bengali: {{t|bn|ধাক্কা দেওয়া}}, {{t|bn|ধাক্কানো}}
+* Bikol Central: {{t|bcl|tuklang}}
 * Bulgarian: {{t+|bg|бутам}}, {{t+|bg|блъскам}}
 * Burmese: {{t+|my|တွန်း|sc=Mymr}}
 * Catalan: {{t+|ca|empènyer}}, {{t+|ca|empentar}}
