--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -27,7 +27,7 @@ Sense 2 (“(''software'') with very few limitations on distribution or improvem
 # {{lb|en|software}} With very few [[limitation]]s on [[distribution]] or the [[right#Noun|right]] to [[access#Verb|access]] the [[source code]] to [[create]] [[improved#Adjective|improved]] [[version]]s, but not necessarily [[free of charge]]. {{defdate|from 21st c.}}
 #* {{quote-book|en|author=Philippe Aigrain|authorlink=Philippe Aigrain|chapter=Libre Software Policies at the European Level|editors=Joseph Feller, [[w:Brian Fitzgerald (academic)|Brian Fitzgerald]], Scott A. Hissam, and {{w|Karim R. Lakhani}}|title=Perspectives on Free and Open Source Software|location=Cambridge, Mass.; London|publisher={{w|MIT Press}}|year=2005|pages=454–455|pageurl=https://books.google.com/books?id=C0Z30r8qdpcC&pg=PA454|isbn=978-0-262-06246-6|passage=The great potential of '''libre''' software for development and social inclusion has long been emphasized. The cost aspect of it, though it might act as a driver, is only one limited aspect of the benefits of '''libre''' software in developing countries, deprived regions, or urban areas. The empowerment of persons and groups to not only use technology, but understand it, at the level and rhythm that fits them, with the resulting ability to become active contributors and to innovate are the essence of '''libre''' software.}}
 #* {{quote-book|en|author=Alma Swan|chapter=Section 3. The Importance of Open Access.|title=Policy Guidelines for the Development and Promotion of Open Access|series=Open Guidelines Series|location=Paris|publisher=[[w:UNESCO|United Nations Educational, Scientific and Cultural Organization]]|year=2012|section=section 3.2 (Levels of Open Access)|page=25|pageurl=https://books.google.com/books?id=ptsR-DIXX-AC&pg=PA25|column=2|isbn=978-92-3-001052-2|passage=The formal definition of Open Access, however, does require re-use rights to enable the article to be re-used in various ways (text-mined, translated into other languages, used in part in other products, etc.), [...]. This is what is known as ‘'''libre'''’ Open Access. ‘'''Libre'''’ Open Access does not yet constitute the bulk of Open Access literature. In institutional repositories the majority of articles are of the ‘gratis’ type, though a small proportion carry an appropriate (usually Creative Commons) licence and are ‘'''libre'''’.}}
-#* {{quote-book|en|author=Joshua M. Pearce|authorlink=Joshua Pearce|chapter=Introduction to Open-source Hardware for Science|title=Open-source Lab: How to Build Your Own Hardware and Reduce Research Costs|location=Waltham, Mass.; Kidlington, Oxfordshire|publisher={{w|Elsevier}}|year=2014|section=section 1.2 (What is Open Source?)|pages=1–2|pageurl=https://books.google.com/books?id=0bOKAAAAQBAJ&pg=PA1|isbn=978-0-12-410462-4|passage=Free and open-source software (F/OSS, FOSS) for free/'''libre'''/open-source software (FLOSS) is a software that is both a free software and an open source. ''FOSS'' is a computer software that is available in source code (open source) form and that can be used, studied, copied, modified, and redistributed without restriction, or with restrictions that only ensure that further recipients have the same rights under which it was obtained (free or '''libre'''). ''Free software'', ''software '''libre''''', or '''''libre''' software'' is software that can be used, studied, and modified without restriction, and which can be copied and redistributed in modified or unmodified form either without restriction or with restrictions that only ensure that further recipients have the same rights under which it was obtained and that manufacturers of consumer products incorporating free software provide that software as source code.}}
+#* {{quote-book|en|author=Joshua M. Pearce|authorlink=Joshua Pearce|chapter=Introduction to Open-source Hardware for Science|title=Open-source Lab: How to Build Your Own Hardware and Reduce Research Costs|location=Waltham, Mass.; Kidlington, Oxfordshire|publisher={{w|Elsevier}}|year=2014|section=section 1.2 (What is Open Source?)|pages=1–2|pageurl=https://books.google.com/books?id=0bOKAAAAQBAJ&pg=PA1|isbn=978-0-12-410462-4|passage=Free and open-source software (F/OSS, FOSS) or free/'''libre'''/open-source software (FLOSS) is a software that is both a free software and an open source. ''FOSS'' is a computer software that is available in source code (open source) form and that can be used, studied, copied, modified, and redistributed without restriction, or with restrictions that only ensure that further recipients have the same rights under which it was obtained (free or '''libre'''). ''Free software'', ''software '''libre''''', or '''''libre''' software'' is software that can be used, studied, and modified without restriction, and which can be copied and redistributed in modified or unmodified form either without restriction or with restrictions that only ensure that further recipients have the same rights under which it was obtained and that manufacturers of consumer products incorporating free software provide that software as source code.}}
 
 ====Usage notes====
 Sense 2 (“(''software'') with very few limitations on distribution or improvement”) is chiefly used to distinguish such software (also called [[free software]]) from [[freeware]], which is distributed free of charge or [[gratis]].
