--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -80,6 +80,7 @@ Sense 2 (“(''software'') with very few limitations on distribution or improvem
 {{trans-bottom}}
 
 ====See also====
+* {{l|en|FLOSS}}
 * {{l|en|free as in beer}}
 * {{l|en|free as in speech}}
 * {{l|en|gratis}}
