--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -98,10 +98,19 @@
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|hangeul=지|eumhun=}}
+===Etymoloty 1===
 
-# {{rfdef|ko|sort=日02}}
+===Hanja===
+{{ko-hanja|맛있다|맛있을|지}}
+
+# {{hanja form of|지|[[delicious]]; [[tasty]]}}
+
+===Etymoloty 2===
+
+===Hanja===
+{{ko-hanja|뜻|지}}
+
+# {{hanja form of|지|[[meaning]]; [[definition]]}}
 
 ----
 
