--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -24,7 +24,7 @@ Sense 2 (“(''software'') with very few limitations on distribution or improvem
 
 # {{lb|en|obsolete|rare}} Especially of the [[will#Noun|will]]: [[free]], [[independent#Adjective|independent]], [[unconstrained]].
 #* {{quote-book|en|author=Alexander Hume|authorlink=Alexander Hume|chapter=Of Gods Benefites Bestowed vpon Man|title=Hymnes, or Sacred Songs,{{nb...|wherein the Right Use of Poësie may be Espied. Be Alexander Hume. Wherevnto are Added, the Experience of the Authors Youth, and Certain Precepts Seruing to the Practise of Santification. The Table Followes in the Next Page.}}|location=Edinburgh|publisher=Printed by [[w:Robert Waldegrave|Robert Walde-graue]],{{nb...|printer to His Kings Majestie.}}|year=1599|oclc=1125487371|newversion=republished as|editor2=John Gardiner Kinnear|title2=Hymns and Sacred Songs,{{nb...|by Alexander Hume. Reprinted from the Edition of Waldegrave, 1599.}}|series2={{w|Bannatyne Club}} Publications|seriesvolume2=41|location2=Edinburgh|publisher2=Printed by [[w:James Ballantyne|Ballantyne and Co.]] [for the Bannatyne Club]|year2=1832|page2=10|pageurl2=https://babel.hathitrust.org/cgi/pt?id=uc1.$c25424&view=1up&seq=38|oclc2=811774852|passage=He [God] [[w:Adam|Adame]] lent a '''libre''' will to follow what he liſt, / And with his holy ſpirit, and grace his choſen dois aſſiſt: [...]}}
-# {{lb|en|software}} With very few [[limitation]]s on [[distribution]] or the [[right#Noun|right]] to [[access#Verb|access]] the [[source code]] to [[create]] [[improved#Adjective|improved]] [[version]]s, but not necessarily [[free of charge]].
+# {{lb|en|software}} With very few [[limitation]]s on [[distribution]] or the [[right#Noun|right]] to [[access#Verb|access]] the [[source code]] to [[create]] [[improved#Adjective|improved]] [[version]]s, but not necessarily [[free of charge]]. {{defdate|from late 20th c.}}
 #* {{quote-journal|en|work=Linux Journal|month=February|year=1999|issue=58|page=48|pageurl=https://archive.org/details/LinuxJournalIssue58/page/n49/mode/1up|author=Alessandro Rubini|title=Software Libre and Commercial Viability|passage=One more point leads toward Free Software in education: when students get jobs, they prefer to use tools they learned at school in order to minimize extra learning efforts. This fact should lead colleges to teach only those tools not owned by anyone—those that are '''libre'''.}}
 #* {{quote-book|en|author=Philippe Aigrain|authorlink=Philippe Aigrain|chapter=Libre Software Policies at the European Level|editors=Joseph Feller, [[w:Brian Fitzgerald (academic)|Brian Fitzgerald]], Scott A. Hissam, and {{w|Karim R. Lakhani}}|title=Perspectives on Free and Open Source Software|location=Cambridge, Mass.; London|publisher={{w|MIT Press}}|year=2005|pages=454–455|pageurl=https://books.google.com/books?id=C0Z30r8qdpcC&pg=PA454|isbn=978-0-262-06246-6|passage=The great potential of '''libre''' software for development and social inclusion has long been emphasized. The cost aspect of it, though it might act as a driver, is only one limited aspect of the benefits of '''libre''' software in developing countries, deprived regions, or urban areas. The empowerment of persons and groups to not only use technology, but understand it, at the level and rhythm that fits them, with the resulting ability to become active contributors and to innovate are the essence of '''libre''' software.}}
 #* {{quote-book|en|author=Alma Swan|chapter=Section 3. The Importance of Open Access.|title=Policy Guidelines for the Development and Promotion of Open Access|series=Open Guidelines Series|location=Paris|publisher=[[w:UNESCO|United Nations Educational, Scientific and Cultural Organization]]|year=2012|section=section 3.2 (Levels of Open Access)|page=25|pageurl=https://books.google.com/books?id=ptsR-DIXX-AC&pg=PA25|column=2|isbn=978-92-3-001052-2|passage=The formal definition of Open Access, however, does require re-use rights to enable the article to be re-used in various ways (text-mined, translated into other languages, used in part in other products, etc.), [...]. This is what is known as ‘'''libre'''’ Open Access. ‘'''Libre'''’ Open Access does not yet constitute the bulk of Open Access literature. In institutional repositories the majority of articles are of the ‘gratis’ type, though a small proportion carry an appropriate (usually Creative Commons) licence and are ‘'''libre'''’.}}
