--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -50,7 +50,7 @@
 ===Kanji===
 {{ja-kanji|grade=uc|rs=心09}}
 
-# {{rfdef|ja|sort=心09}}
+1. healing
 
 ====Readings====
 * {{ja-readings|on=ゆ|kun=まさる,いよいよ}}
