--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -201,6 +201,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Romanian: {{t+|ro|trage}}
 * Romansch: {{t|rm|trair}}
 * Russian: {{t+|ru|тяну́ть|impf}}, {{t+|ru|потяну́ть|pf}}, {{t+|ru|тащи́ть|impf}}, {{t+|ru|потащи́ть|pf}}, {{t+|ru|тяга́ть|impf}} {{qualifier|abstract}}
+* Sanskrit: {{t+|sa|कर्षति}}
 * Scottish Gaelic: {{t|gd|slaod}}, {{t|gd|tarraing}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|потезати|impf}}, {{t|sh|потегнути|pf}}
