--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -32,7 +32,7 @@ Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original
 |dg=сы1
 |c=si6
 |c-t=si5
-|ca=File:LL-Q9186-Luilui6666-是.wav ‎
+|ca=LL-Q9186-Luilui6666-是.wav ‎
 |g=si5
 |h=pfs=sṳ;gd=si4
 |j=si3
