--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -15,7 +15,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * {{homophones|en|chews}}
 
 ====Verb====
-{{en-verb|chooses|choosing|chose|chosen}}
+{{en-verb|chooses|choosing|chose|chosen|past_ptc2=chose|past_ptc2_qual=now colloquial}}
 
 # To [[pick]]; to make the choice of; to select.
 #: {{ux|en|I '''chose''' a nice ripe apple from the fruit bowl.}}
