--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -247,7 +247,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 *: Northern Sami: {{t|se|hállat}}, {{t|se|hoallat}}, {{t|se|hupmat}}
 *: Southern Sami: {{t|sma|håaledh}}, {{t|sma|håalodh}}, {{t|sma|nåalodh}}
 * Samoan: {{t|sm|tautala}}
-* Sanskrit: {{t+|sa|भणति}}, {{t+|sa|ब्रवीति}}
+* Sanskrit: {{t+|sa|भाषते}}, {{t+|sa|भणति}}, {{t+|sa|ब्रवीति}}
 *: Vedic: {{t|sa|भनति|tr=bhánati}}
 * Santali: {{t|sat|ᱨᱳᱲ}}
 * Sardinian: {{t|sc|fabedda}}, {{t|sc|faeddare}}, {{t|sc|fueddai}}
