--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -140,7 +140,7 @@ From {{inh|en|enm|fighten}}, from {{inh|en|ang|feohtan||to fight, combat, strive
 * Romanian: {{t+|ro|lupta}}, {{t+|ro|bate|alt=se bate}}
 * Romansch: {{t|rm|lutgar}}
 * Russian: {{t+|ru|дра́ться|impf}}, {{t+|ru|би́ться|impf}}, {{t+|ru|боро́ться|impf}} {{q|wrestle}}, {{t+|ru|сража́ться|impf}} {{q|in a duel or battle}}, {{t+|ru|воева́ть|impf|sc=Cyrl}}
-* Sanskrit: {{t-needed|sa}}
+* Sanskrit: {{t+|sa|युध्यते}}
 * Scots: {{t|sco|fecht}}
 * Scottish Gaelic: {{t|gd|cog}}, {{t|gd|sabaid}}
 * Serbo-Croatian:
