--- a/en/s/spelled.7212.wikitext
+++ b/en/s/spelled.7212.wikitext
@@ -5,6 +5,7 @@
 
 ===Pronunciation===
 * {{IPA|en|/ˈspɛld/}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-spelled.wav|Audio (UK)}}
 
 ===Verb===
 {{head|en|verb form}}
